test/files/events-obsclass-neg/visibility.check
visibility.scala:3: error: illegal combination of modifiers: observable/varargs and private for: class Klass
private observable class Klass (val param: String) {
                         ^
one error found
